# eth-explorer-mvp

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: Home.py  streamlit_app.py
app/pages/: 1_Search.py  2_Block.py  3_Tx.py  4_Address.py  5_Gas.py
etl/: build_serving_tables.py
etl/sql/: serving_tables.sql
lib/: db.py  hex.py  pagination.py  time_utils.py  value_utils.py
