[project]
name = "eth-explorer-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
]
